k8s/manifests/003-deployment.yaml
apiVersion: v1
kind: Service
metadata: 
  name: userservice
  namespace: otus-hm2
spec: 
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 80
  selector: 
    app: userservice-app

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userservice-app
  namespace: otus-hm2
  labels:
    app: userservice-app
spec: 
  selector: 
    matchLabels: 
      app: userservice-app
  replicas: 3
  strategy:
   type: Recreate 
 #   type: RollingUpdate
 #   rollingUpdate: 
 #     maxSurge: 1
 #     maxUnavailable: 0
  template:
    metadata: 
      labels:
        app: userservice-app
    spec: 
      containers: 
        - name: userservice-container
          image: chepene/otus2-repo:v11
          ports: 
             - containerPort: 80
          readinessProbe:
            initialDelaySeconds: 5
            httpGet:
              path: api/health
              port: 80
