k8s/manifests/000-ingress-manifest.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress-app
  namespace: otus-hm2
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - backend:
              service:
                name: userservice
                port:
                  number: 8000
            pathType: Prefix
            path: /
